basic functionality now im leaving the house

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
 :root {
-  font-family: Ubuntu, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, Helvetica, system-ui, Avenir, Arial, sans-serif;
 }
